cmake_minimum_required(VERSION 2.8)
project(jnitests)
set(CMAKE_BUILD_TYPE Release)
find_package(JNI REQUIRED)
include_directories(${JNI_INCLUDE_DIRS} ../../../include)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(SOURCE_FILES javaJNITest.cpp)
add_library(jnitests SHARED ${SOURCE_FILES})
